# RexBole

./: .env.development  .gitignore  docker-compose.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
apps/backend/: pyproject.toml
apps/backend/app/: __init__.py  crud.py  main.py  models.py
apps/backend/app/alembic/versions/: e2412789c190_initialize_models.py
apps/backend/app/api/: __init__.py  main.py
apps/backend/app/api/routes/: items.py  recommendations.py  users.py  utils.py
apps/backend/app/libs/ReXBole/: .gitignore  README.md  __init__.py  practice_cdae_lxr.py  preprocess_data.py  rec_ex_api.py  run_recbole.py  run_xbole.py
apps/backend/app/libs/ReXBole/recbole/config/: configurator.py
apps/backend/app/libs/ReXBole/recbole/data/dataset/: dataset.py
apps/backend/app/libs/ReXBole/recbole/model/: abstract_recommender.py
apps/backend/app/libs/ReXBole/recbole/model/context_aware_recommender/: dcn.py  fm.py
apps/backend/app/libs/ReXBole/recbole/model/general_recommender/: bpr.py  cdae.py
apps/backend/app/libs/ReXBole/recbole/model/knowledge_aware_recommender/: kgcn.py
apps/backend/app/libs/ReXBole/recbole/quick_start/: quick_start.py
apps/backend/app/libs/ReXBole/recbole/utils/: utils.py
apps/backend/app/libs/ReXBole/run_example/: case_study_example.py
apps/backend/app/libs/ReXBole/xbole/: load_rec_test.py
apps/backend/app/libs/ReXBole/xbole/config/: configurator.py
apps/backend/app/libs/ReXBole/xbole/model/: __init__.py  abstract_explainer.py  lxr.py  pgexplainer.py
apps/backend/app/libs/ReXBole/xbole/quick_start/: __init__.py  quick_start.py
apps/backend/app/libs/ReXBole/xbole/trainer/: __init__.py  trainer.py
apps/backend/app/tests/api/routes/: test_items.py
apps/backend/app/tests/utils/: item.py
apps/backend/dataset/amazon_appliances/: amazon_appliances.inter
apps/backend/log_tensorboard/BPR-ml-100k-Aug-29-2024_07-39-27-010da5/: events.out.tfevents.1724917168.docker-desktop.8122.0
apps/backend/log_tensorboard/BPR-ml-100k-Aug-29-2024_07-39-27-010da5/1724917185.8759904/: events.out.tfevents.1724917185.docker-desktop.8122.1
apps/backend/saved/: BPR-Aug-29-2024_07-39-28.pth  CDAE-Aug-27-2024_06-19-42.pth  CDAE-Nov-08-2024_21-11-43.pth  CDAE-Nov-14-2024_10-42-56.pth  CDAE-Nov-14-2024_11-20-23.pth  CDAE-Sep-08-2024_20-39-29.pth
collections/: Login.bru  bruno.json
myenv/: pyvenv.cfg
(+27 files in other folders)
